--- a/main.tex
+++ b/main.tex
@@ -41,6 +41,7 @@
 %% The amssymb package provides various useful mathematical symbols
 \usepackage{amssymb}
 \usepackage[symbol]{footmisc}
+\usepackage{color,soul}
 
 
 
