--- a/refs.bib
+++ b/refs.bib
@@ -756,6 +756,60 @@ url = {http://www.fao.org/docrep/pdf/010/a1336e/a1336e.pdf}}
 	journal = {Science}
 }
 
+@article{Grundt_1982,
+	doi = {10.1016/0360-3199(82)90088-x},
+	url = {https://doi.org/10.1016%2F0360-3199%2882%2990088-x},
+	year = 1982,
+	publisher = {Elsevier {BV}},
+	volume = {7},
+	number = {3},
+	pages = {247--257},
+	author = {T Grundt},
+	title = {Hydrogen by water electrolysis as basis for small scale ammonia production. A comparison with hydrocarbon based technologies},
+	journal = {International Journal of Hydrogen Energy}
+}
+
+@article{McGuigan_2012,
+	doi = {10.1016/j.jhazmat.2012.07.053},
+	url = {https://doi.org/10.1016%2Fj.jhazmat.2012.07.053},
+	year = 2012,
+	month = {oct},
+	publisher = {Elsevier {BV}},
+	volume = {235-236},
+	pages = {29--46},
+	author = {Kevin G. McGuigan and Ron{\'{a}}n M. Conroy and Hans-Joachim Mosler and Martella du Preez and Eunice Ubomba-Jaswa and Pilar Fernandez-Iba{\~{n}}ez},
+	title = {Solar water disinfection ({SODIS}): A review from bench-top to roof-top},
+	journal = {Journal of Hazardous Materials}
+}
+
+@article{Lonnen_2005,
+	doi = {10.1016/j.watres.2004.11.023},
+	url = {https://doi.org/10.1016%2Fj.watres.2004.11.023},
+	year = 2005,
+	month = {mar},
+	publisher = {Elsevier {BV}},
+	volume = {39},
+	number = {5},
+	pages = {877--883},
+	author = {J. Lonnen and S. Kilvington and S.C. Kehoe and F. Al-Touati and K.G. McGuigan},
+	title = {Solar and photocatalytic disinfection of protozoan, fungal and bacterial microbes in drinking water},
+	journal = {Water Research}
+}
+
+@article{Pfromm_2017,
+	doi = {10.1063/1.4985090},
+	url = {https://doi.org/10.1063%2F1.4985090},
+	year = 2017,
+	month = {may},
+	publisher = {{AIP} Publishing},
+	volume = {9},
+	number = {3},
+	pages = {034702},
+	author = {Peter H. Pfromm},
+	title = {Towards sustainable agriculture: Fossil-free ammonia},
+	journal = {Journal of Renewable and Sustainable Energy}
+}
+
 
 @article{Foster_2018,
 	doi = {10.1038/s41929-018-0092-7},
@@ -1386,6 +1440,33 @@ year = {2000}
 	journal = {Journal of the American Chemical Society}
 }
 
+
+@article{Lazouski_2019,
+	doi = {10.1016/j.joule.2019.02.003},
+	url = {https://doi.org/10.1016%2Fj.joule.2019.02.003},
+	year = 2019,
+	month = {mar},
+	publisher = {Elsevier {BV}},
+	author = {Nikifar Lazouski and Zachary J. Schiffer and Kindle Williams and Karthish Manthiram},
+	title = {Understanding Continuous Lithium-Mediated Electrochemical Nitrogen Reduction},
+	journal = {Joule}
+}
+
+@article{McEnaney_2017,
+	doi = {10.1039/c7ee01126a},
+	url = {https://doi.org/10.1039%2Fc7ee01126a},
+	year = 2017,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {10},
+	number = {7},
+	pages = {1621--1630},
+	author = {Joshua M. McEnaney and Aayush R. Singh and Jay A. Schwalbe and Jakob Kibsgaard and John C. Lin and Matteo Cargnello and Thomas F. Jaramillo and Jens K. N{\o}rskov},
+	title = {Ammonia synthesis from N2 and H2O using a lithium cycling electrification strategy at atmospheric pressure},
+	journal = {Energy {\&} Environmental Science}
+}
+
+
+
 @article{Chen_2010,
 	doi = {10.1557/jmr.2010.0020},
 	url = {https://doi.org/10.1557%2Fjmr.2010.0020},
@@ -1971,6 +2052,33 @@ and Sarah Gavian},
 	journal = {Journal of Agronomy and Crop Science}
 }
 
+@article{Jiao_2015,
+	doi = {10.1039/c4cs00470a},
+	url = {https://doi.org/10.1039%2Fc4cs00470a},
+	year = 2015,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {44},
+	number = {8},
+	pages = {2060--2086},
+	author = {Yan Jiao and Yao Zheng and Mietek Jaroniec and Shi Zhang Qiao},
+	title = {Design of electrocatalysts for oxygen- and hydrogen-involving energy conversion reactions},
+	journal = {Chemical Society Reviews}
+}
+
+@article{Seh_2017,
+	doi = {10.1126/science.aad4998},
+	url = {https://doi.org/10.1126%2Fscience.aad4998},
+	year = 2017,
+	month = {jan},
+	publisher = {American Association for the Advancement of Science ({AAAS})},
+	volume = {355},
+	number = {6321},
+	pages = {eaad4998},
+	author = {Zhi Wei Seh and Jakob Kibsgaard and Colin F. Dickens and Ib Chorkendorff and Jens K. N{\o}rskov and Thomas F. Jaramillo},
+	title = {Combining theory and experiment in electrocatalysis: Insights into materials design},
+	journal = {Science}
+}
+
 @article{Shiraishi_2018,
 	doi = {10.1021/acsaem.8b00829},
 	url = {https://doi.org/10.1021%2Facsaem.8b00829},
@@ -2362,4 +2470,170 @@ abstract  ="Direct electrochemical synthesis of ammonia is proposed as a means o
  title = {Evaluating Economy of Scale},
  volume = {44},
  year = {1972}
+}
+
+@article{Jewess_2016,
+	doi = {10.1021/acssuschemeng.6b01473},
+	url = {https://doi.org/10.1021\%2Facssuschemeng.6b01473},
+	year = 2016,
+	month = {oct},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {4},
+	number = {11},
+	pages = {5855--5858},
+	author = {Michael Jewess and Robert H. Crabtree},
+	title = {Electrocatalytic Nitrogen Fixation for Distributed Fertilizer Production?},
+	journal = {{ACS} Sustainable Chemistry {\&} Engineering}
+}
+
+@article{Suryanto_2019,
+	doi = {10.1038/s41929-019-0252-4},
+	url = {https://doi.org/10.1038%2Fs41929-019-0252-4},
+	year = 2019,
+	month = {mar},
+	publisher = {Springer Nature},
+	author = {Bryan H. R. Suryanto and Hoang-Long Du and Dabin Wang and Jun Chen and Alexandr N. Simonov and Douglas R. MacFarlane},
+	title = {Challenges and prospects in the catalysis of electroreduction of nitrogen to ammonia},
+	journal = {Nature Catalysis}
+}
+
+@article{owidfertilizerandpesticides,
+    author = {Max Roser and Hannah Ritchie},
+    title = {Fertilizer and Pesticides},
+    journal = {Our World in Data},
+    year = {2019},
+    note = {https://ourworldindata.org/fertilizer-and-pesticides}
+}
+
+@article{Furuya_1989,
+	doi = {10.1016/0022-0728(89)87086-x},
+	url = {https://doi.org/10.1016%2F0022-0728%2889%2987086-x},
+	year = 1989,
+	month = {nov},
+	publisher = {Elsevier {BV}},
+	volume = {272},
+	number = {1-2},
+	pages = {263--266},
+	author = {Nagakazu Furuya and Hiroshi Yoshiba},
+	title = {Electroreduction of nitrogen to ammonia on gas-diffusion electrodes modified by metal phthalocyanines},
+	journal = {Journal of Electroanalytical Chemistry and Interfacial Electrochemistry}
+}
+
+@article{Kyriakou_2017,
+	doi = {10.1016/j.cattod.2016.06.014},
+	url = {https://doi.org/10.1016%2Fj.cattod.2016.06.014},
+	year = 2017,
+	month = {may},
+	publisher = {Elsevier {BV}},
+	volume = {286},
+	pages = {2--13},
+	author = {V. Kyriakou and I. Garagounis and E. Vasileiou and A. Vourros and M. Stoukides},
+	title = {Progress in the Electrochemical Synthesis of Ammonia},
+	journal = {Catalysis Today}
+}
+
+@article{Ndegwa_2009,
+	doi = {10.2134/jeq2008.0211},
+	url = {https://doi.org/10.2134%2Fjeq2008.0211},
+	year = 2009,
+	publisher = {American Society of Agronomy},
+	volume = {38},
+	number = {2},
+	pages = {647},
+	author = {P. M. Ndegwa and V. K. Vaddella and A. N. Hristov and H. S. Joo},
+	title = {Measuring Concentrations of Ammonia in Ambient Air or Exhaust Air Stream using Acid Traps},
+	journal = {Journal of Environment Quality}
+}
+
+@article{Mehta_2018,
+	doi = {10.1038/s41929-018-0045-1},
+	url = {https://doi.org/10.1038%2Fs41929-018-0045-1},
+	year = 2018,
+	month = {apr},
+	publisher = {Springer Nature},
+	volume = {1},
+	number = {4},
+	pages = {269--275},
+	author = {Prateek Mehta and Patrick Barboun and Francisco A. Herrera and Jongsik Kim and Paul Rumbach and David B. Go and Jason C. Hicks and William F. Schneider},
+	title = {Overcoming ammonia synthesis scaling relations with plasma-enabled catalysis},
+	journal = {Nature Catalysis}
+}
+
+@article{Tao_2019,
+	doi = {10.1016/j.chempr.2018.10.007},
+	url = {https://doi.org/10.1016%2Fj.chempr.2018.10.007},
+	year = 2019,
+	month = {jan},
+	publisher = {Elsevier {BV}},
+	volume = {5},
+	number = {1},
+	pages = {204--214},
+	author = {Hengcong Tao and Changhyeok Choi and Liang-Xin Ding and Zheng Jiang and Zishan Han and Mingwen Jia and Qun Fan and Yunnan Gao and Haihui Wang and Alex W. Robertson and Song Hong and Yousung Jung and Shizhen Liu and Zhenyu Sun},
+	title = {Nitrogen Fixation by Ru Single-Atom Electrocatalytic Reduction},
+	journal = {Chem}
+}
+
+@article{Song_2019,
+	doi = {10.1039/c8cc09256g},
+	url = {https://doi.org/10.1039%2Fc8cc09256g},
+	year = 2019,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {55},
+	number = {5},
+	pages = {687--690},
+	author = {Pengfei Song and Hao Wang and Li Kang and Baocheng Ran and Honghong Song and Rongmin Wang},
+	title = {Electrochemical nitrogen reduction to ammonia at ambient conditions on nitrogen and phosphorus co-doped porous carbon},
+	journal = {Chemical Communications}
+}
+
+@article{Luo_2019,
+	doi = {10.1016/j.joule.2018.09.011},
+	url = {https://doi.org/10.1016%2Fj.joule.2018.09.011},
+	year = 2019,
+	month = {jan},
+	publisher = {Elsevier {BV}},
+	volume = {3},
+	number = {1},
+	pages = {279--289},
+	author = {Yaru Luo and Gao-Feng Chen and Li Ding and Xinzhi Chen and Liang-Xin Ding and Haihui Wang},
+	title = {Efficient Electrocatalytic N2 Fixation with {MXene} under Ambient Conditions},
+	journal = {Joule}
+}
+
+@article{Wang_2018,
+	doi = {10.1002/cssc.201802149},
+	url = {https://doi.org/10.1002%2Fcssc.201802149},
+	year = 2018,
+	month = {oct},
+	publisher = {Wiley},
+	volume = {11},
+	number = {19},
+	pages = {3356--3356},
+	author = {Dabin Wang and Luis Miguel Azofra and Moussab Harb and Luigi Cavallo and Xinyi Zhang and Bryan H. R. Suryanto and Douglas R. MacFarlane},
+	title = {Energy-Efficient Nitrogen Reduction to Ammonia at Low Overpotential in Aqueous Electrolyte under Ambient Conditions},
+	journal = {{ChemSusChem}}
+}
+
+@article{Bicer_2018,
+	doi = {10.1016/j.ijhydene.2018.10.074},
+	url = {https://doi.org/10.1016%2Fj.ijhydene.2018.10.074},
+	year = 2018,
+	month = {nov},
+	publisher = {Elsevier {BV}},
+	author = {Yusuf Bicer and Ibrahim Dincer},
+	title = {Exergoeconomic analysis and optimization of a concentrated sunlight-driven integrated photoelectrochemical hydrogen and ammonia production system},
+	journal = {International Journal of Hydrogen Energy}
+}
+@article{Bicer_2017,
+	doi = {10.1021/acssuschemeng.7b01638},
+	url = {https://doi.org/10.1021%2Facssuschemeng.7b01638},
+	year = 2017,
+	month = {aug},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {5},
+	number = {9},
+	pages = {8035--8043},
+	author = {Yusuf Bicer and Ibrahim Dincer},
+	title = {Assessment of a Sustainable Electrochemical Ammonia Production System Using Photoelectrochemically Produced Hydrogen under Concentrated Sunlight},
+	journal = {{ACS} Sustainable Chemistry {\&} Engineering}
 }
