--- a/main.tex
+++ b/main.tex
@@ -41,7 +41,9 @@
 %% The amssymb package provides various useful mathematical symbols
 \usepackage{amssymb}
 \usepackage[symbol]{footmisc}
-\usepackage{color,soul}
+\usepackage{color, soul}
+\usepackage[most]{tcolorbox}
+\newtcolorbox{highlighted}{colback=yellow,breakable}
 
 
 
