--- a/refs.bib
+++ b/refs.bib
@@ -1994,6 +1994,13 @@ and Sarah Gavian},
 	journal = {Plant and Soil}
 }
 
+@techreport{fuelcells,
+     title = {{Manufacturing Cost Analysis of PEM Fuel Cell Systems for 5- and 10-kW Backup Power Applications}},
+     year = {2016},
+     institution = {Department of Energy},
+     month = {Oct.}
+}
+
 @misc{africa_fert_2017,
   author = {{Africa Fertilizer}},
   title = {Urea Price In Ghana 2017},
