--- a/body.tex
+++ b/body.tex
@@ -1,7 +1,7 @@
 \section{Introduction}
 
 % Motivate need for new process
-The standard method of producing ammonia at industrial scale is through the thermochemical synthesis with the well-known Haber-Bosch process \cite{Schloegl_2003}. This process transformed the global fertilizer industry during the early 1900's, and is a critical enabler of the continued expansion of human population \cite{Smil_1999} -- N-fertilizers are estimated to feed half of the global population \cite{Zhang_2015}. The Haber-Bosch process is an impressive feat of modern chemical engineering, producing 140 million (Fig. \ref{fig:ammonia_prod}) tonnes of ammonia per year at a thermochemical efficiency of up to 70\% \cite{Schloegl_2003,Schiffer_2017}. However, the process also has downsides. The scale of the process leads massive energy consumption of 2.5 exajoule per year, with the hydrogen feedstock typically obtained via the methane reforming reaction \cite{Abbas_2010}, leading to a carbon footprint of 340 million tonnes of CO$_2$ equivalent per year. This is the highest carbon impact of any commodity chemical \cite{Schiffer_2017}. Furthermore, the high temperatures ($\sim$700 K) and pressures ($\sim$100 bar) lead to substantial capital and operational costs. The economies of scale for these costs favor large plants and highly centralized production with $<$100 plants worldwide with an average capacity of 2200 tonnes day$^{-1}$ \cite{McArthur_2017, Bartels}. This is in contrast to the dispersed use of ammonia-based fertilizers globally (Fig. \ref{fig:usemap}), which results in high transportation costs and additional carbon emissions \cite{West_2002}. This is particularly relevant and impactful in remote locations such as in sub-Saharan Africa, where soils are often nutrient limited due to low or no access to fertilizer by smallholder or poor resource farmers \cite{Gilbert_2012, Mueller_2012, VanderVelde2014}, leading to Africa having significantly lower usage of fertilizer compared to other regions (see \ref{fig:ammonia_prod}b). While global hunger has historically decreased with ammonia production, this trend has recently reversed (Fig. \ref{fig:ammonia_prod}a), suggesting that current practices prevent produced ammonia from reaching the agricultural areas where it is most necessary. The opposite problem of over fertilization also has a negative environmental impact in more developed regions due to the periodic application of higher rates of concentrated fertilizers that cause nitrate pollution through leaching into waterways, causing vast ocean ``dead zones'' \cite{Diaz2008, Stevens_2019} as well as high emissions of gaseous nitrous oxide that contribute to climate change. Finally, the intense conditions and reactive nature of concentrated ammonia-based fertilizer lead to safety and national security concerns, as evidenced by explosions at fertilizer plants and the common use of fertilizers in makeshift explosives \cite{Marlair_2005}.
+The standard method of producing ammonia at industrial scale is through the thermochemical synthesis with the well-known Haber-Bosch process \cite{Schloegl_2003}. This process transformed the global fertilizer industry during the early 1900's, and is a critical enabler of the continued expansion of human population \cite{Smil_1999} -- N-fertilizers are estimated to feed half of the global population \cite{Zhang_2015}. The Haber-Bosch process is an impressive feat of modern chemical engineering, producing 140 million (Fig. \ref{fig:ammonia_prod}) tonnes of ammonia per year at a thermochemical efficiency of up to 70\% \cite{Schloegl_2003,Schiffer_2017}. However, the process also has downsides. The scale of the process leads massive energy consumption of 2.5 exajoule per year, with the hydrogen feedstock typically obtained via the methane reforming reaction \cite{Abbas_2010}, leading to a carbon footprint of 340 million tonnes of CO$_2$ equivalent per year. This is the highest carbon impact of any commodity chemical \cite{Schiffer_2017}. Furthermore, the high temperatures ($\sim$700 K) and pressures ($\sim$100 bar) lead to substantial capital and operational costs. The economies of scale for these costs favor large plants and highly centralized production with $<$100 plants worldwide with an average capacity of 2200 tonnes day$^{-1}$ \cite{McArthur_2017, Bartels}. This is in contrast to the dispersed use of ammonia-based fertilizers globally (Fig. \ref{fig:usemap}), which results in high transportation costs and additional carbon emissions \cite{West_2002}. This is particularly relevant and impactful in remote locations such as in sub-Saharan Africa, where soils are often nutrient limited due to low or no access to fertilizer by smallholder or poor resource farmers \cite{Gilbert_2012, Mueller_2012, VanderVelde2014, Liu2016}, leading to Africa having significantly lower usage of fertilizer compared to other regions (see \ref{fig:ammonia_prod}b). While global hunger has historically decreased with ammonia production, this trend has recently reversed (Fig. \ref{fig:ammonia_prod}a), suggesting that current practices prevent produced ammonia from reaching the agricultural areas where it is most necessary. The opposite problem of over fertilization also has a negative environmental impact in more developed regions due to the periodic application of higher rates of concentrated fertilizers that cause nitrate pollution through leaching into waterways, causing vast ocean ``dead zones'' \cite{Diaz2008, Stevens_2019} as well as high emissions of gaseous nitrous oxide that contribute to climate change. Finally, the intense conditions and reactive nature of concentrated ammonia-based fertilizer lead to safety and national security concerns, as evidenced by explosions at fertilizer plants and the common use of fertilizers in makeshift explosives \cite{Marlair_2005}.
 
 \begin{figure}
     \centering
@@ -333,15 +333,15 @@ Finally, we note that it is also important to report and control the conditions 
 
 \section{Conclusions}
 
-Solar fertilzers present an exciting opportunity to directly capture diffuse solar energy and convert it to chemical energy that can be applied at or near the point of production. The technology falls at the complex nexus of energy and agriculture. Substantial additional research is needed to establish the most promising approaches and to demonstrate the technology. This work grapples with some initial considerations from the perspective of agronomics and photo(electro)chemistry and identifies some preliminary strategies that will aid in the development and deployment of solar fertilizer technologies. Several scenarios for decentralized fertilizer production are presented and the potential social, economic, and technical advantages and disadvantages are discussed. The key technical needs for solar fertilizer production are identified as solar capture, reaction, and separation, and some possible strategies and considerations are presented. Specific metrics and testing conditions are identified, along with targets that may enable solar fertilizer technology. The metrics and considerations presented draw on a range of expertise in the diverse fields of agronomics, photo(electro)catalysis, chemical separations, and process systems engineering, and provide a starting point for further development of solar fertilizer technologies. There are many possible routes forward for this nascent field, and identifying the most promising will require a diverse range of technical, social, and economic considerations. However, the vast potential impact of solar fertilizers on the growing problem of world hunger makes this challenging endeavor worthwhile.
+Solar fertilizers present an exciting opportunity to directly capture diffuse solar energy and convert it to chemical energy that can be applied at or near the point of production. The technology falls at the complex nexus of energy and agriculture. Substantial additional research is needed to establish the most promising approaches and to demonstrate the technology. This work grapples with some initial considerations from the perspective of agronomics and photo(electro)chemistry and identifies some preliminary strategies that will aid in the development and deployment of solar fertilizer technologies. Several scenarios for decentralized fertilizer production are presented and the potential social, economic, and technical advantages and disadvantages are discussed. The key technical needs for solar fertilizer production are identified as solar capture, reaction, and separation, and some possible strategies and considerations are presented. Specific metrics and testing conditions are identified, along with targets that may enable solar fertilizer technology. The metrics and considerations presented draw on a range of expertise in the diverse fields of agronomics, photo(electro)catalysis, chemical separations, and process systems engineering, and provide a starting point for further development of solar fertilizer technologies. There are many possible routes forward for this nascent field, and identifying the most promising will require a diverse range of technical, social, and economic considerations. However, the vast potential impact of solar fertilizers on the growing problem of world hunger makes this challenging endeavor worthwhile.
 
 \section*{Acknowledgements}
-A.J.M. and M.C.H. would like to acknowledge funding from the Serve-Learn-Sustain program at Georgia Tech for organizing workshops and meetings.
+Funding for this study was in part supported by the United States Agency for International Development (USAID)’s Feed the Future Soil Fertility Technology Adoption, Policy Reform and Knowledge Management Project. A.J.M. and M.C.H. would like to acknowledge funding from the Serve-Learn-Sustain program at Georgia Tech for organizing workshops and meetings.
 
 \section*{Author Contributions}
 Conceptualization, A.J.M., M.C.H., and U.S.; Methodology, A.J.M., M.C.H., U.S., M.R.; Investigation, B.M.C., P.F., C.O.D.,Y.-H.L., C.F., P.A.; Writing - Original Draft, A.J.M., B.M.C.; Writing - Review \& Editing, B.M.C., M.C.H., A.J.M., P.F.; Supervision, U.S., P.F., C.O.D. 
 
 \section*{Declaration of Interests}
-The authors declare no competing interests.
+A.J.M, M.C.H, and B.M.C are co-inventors on a provisional patent for ``Electro(photo)chemical nitrogen oxidation'' (U.S. Patent Application No. 62/688,904).
 
 \section*{References}
