--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,7 @@
 %% The lineno packages adds line numbers. Start line numbering with
 %% \begin{linenumbers}, end it with \end{linenumbers}. Or switch it on
 %% for the whole article with \linenumbers after \end{frontmatter}.
-\usepackage{lineno}
+%\usepackage{lineno}
 
 
 %% natbib.sty is loaded by default. However, natbib options can be
@@ -76,7 +76,7 @@
 %%
 %% \biboptions{comma,round}
 
-% \biboptions{}
+\biboptions{super}
 
 
 
@@ -162,7 +162,7 @@ Ammonia \sep Nitrogen \sep Sustainability \sep Agronomics \sep Electrochemistry 
 \input{body.tex}
 
 \bibliographystyle{elsevier}
-\bibliography{refs.bib}
+\bibliography{refs_abr.bib}
 
 %% Authors are advised to submit their bibtex database files. They are
 %% requested to list a bibtex style file in the manuscript if they do
