--- a/refs.bib
+++ b/refs.bib
@@ -1587,6 +1587,19 @@ volume = {20},
 year = {2014}
 }
 
+@article{Liu_2016,
+	doi = {10.1038/srep30104},
+	url = {https://doi.org/10.1038%2Fsrep30104},
+	year = 2016,
+	month = {jul},
+	publisher = {Springer Nature},
+	volume = {6},
+	number = {1},
+	author = {Junguo Liu and Kun Ma and Philippe Ciais and Stephen Polasky},
+	title = {Reducing human nitrogen use for food production},
+	journal = {Scientific Reports}
+}
+
 @incollection{Ullmann_amm_2006,
 author = {Appl, Max},
 publisher = {John Wiley {\&} Sons, Inc},
@@ -1601,7 +1614,7 @@ year = {2006},
 abstract = {Abstract The article contains sections titled: 1. Occurrence and History 2. Physical Properties 3. Chemical Properties 4. Production 4.1. Historical Development 4.2. Thermodynamic Data 4.3. Ammonia Synthesis Reaction 4.3.1. General Aspects 4.3.2. Catalyst Surface and Reaction Mechanism 4.3.3. Kinetics 4.4. Catalysts 4.4.1. Classical Iron Catalysts 4.4.1.1. Composition 4.4.1.2. Particle Size and Shape 4.4.1.3. Catalyst-Precursor Manufacture 4.4.1.4. Catalyst Reduction 4.4.1.5. Catalyst Poisons 4.4.2. Other Catalysts 4.4.2.1. General Aspects 4.4.2.2. Metals with Catalytic Potential 4.4.2.3. Commercial Ruthenium Catalysts 4.5. Process Steps of Ammonia Production 4.5.1. Synthesis Gas Production 4.5.1.1. Feedstock Pretreatment and Raw Gas Production 4.5.1.2. Carbon Monoxide Shift Conversion 4.5.1.3. Gas Purification 4.5.2. Compression 4.5.3. Ammonia Synthesis 4.5.3.1. Synthesis Loop Configurations 4.5.3.2. Formation of Ammonia in the Converter 4.5.3.3. Waste-Heat Utilization and Cooling 4.5.3.4. Ammonia Recovery from the Ammonia Synthesis Loop 4.5.3.5. Inert-Gas and Purge-Gas Management 4.5.3.6. Influence of Pressure and Other Variables of the Synthesis Loop 4.5.3.7. Example of an Industrial Synthesis Loop 4.6. Complete Ammonia Production Plants 4.6.1. Steam Reforming Ammonia Plants 4.6.1.1. The Basic Concept of Single-Train Plants 4.6.1.2. Further Developments 4.6.1.3. Minimum Energy Requirement for Steam Reforming Processes 4.6.1.4. Commercial Steam Reforming Ammonia Processes 4.6.1.4.1. Advanced Conventional Processes 4.6.1.4.2. Processes with Reduced Primary Reformer Firing 4.6.1.4.3. Processes Without a Fired Primary Reformer (Exchanger Reformer) 4.6.1.4.4. Processes Without a Secondary Reformer (Nitrogen from Air Separation) 4.6.2. Ammonia Plants based on Partial Oxidation 4.6.2.1. Ammonia Plants Based on Heavy Hydrocarbons 4.6.2.2. Ammonia Plants Using Coal as Feedstock 4.6.3. Waste-Heat Boilers 4.6.4. Single-Train Capacity – Mega Ammonia Plants 4.7. Modernization of Older Plants (Revamping) 4.8. Material Considerations for Equipment Fabrication 5. Storage and Shipping 5.1. Storage 5.1.1. Pressure Storage 5.1.2. Low-Temperature Storage 5.1.3. Underground Storage 5.1.4. Storage of Aqueous Ammonia 5.2. Transportation 6. Quality Specifications and Analysis 7. Environmental, Safety, and Health Aspects 7.1. Environmental Aspects of Ammonia Production and Handling 7.2. Safety Features 7.3. Health Aspects and Toxicity of Ammonia 8. Uses 9. Economic Aspects 10. Future Perspectives}
 }
 
-@TECHREPORT{Foster_2011},
+@TECHREPORT{Foster_2011,
 title = {Congo, Democratic Republic of - The Democratic Republic of Congo's infrastructure: a continental perspective},
 author = {Foster, Vivien and Benitez, Daniel Alberto},
 year = {2011},
@@ -1658,12 +1671,12 @@ abstract = {Abstract Nitrogen is an important industrial gas and an element that
 
 
 @article{TANIGUCHI_2015,
-author = {Masaaki Taniguchi, Hitoshi Asaoka, Toshiyuki Ayuhara},
-number = {33},
-pages = {34--38},
-title = {{Energy Saving Air-Separation Plant Based on Exergy Analysis}},
-year = {2015}
-journal = {KOBELCO TECHNOLOGY REVIEW},
+    author = {Masaaki Taniguchi, Hitoshi Asaoka, Toshiyuki Ayuhara},
+    number = {33},
+    pages = {34--38},
+    title = {{Energy Saving Air-Separation Plant Based on Exergy Analysis}},
+    year = {2015},
+    journal = {KOBELCO TECHNOLOGY REVIEW},
 }
 
 @article{Smith_2001,
@@ -1829,15 +1842,6 @@ Sugiyama and Katsushi Fujii},
   publisher = {Nature Publishing Group},
 }
 
-%@Book{waller2016irrigation,
-% author = {Waller, Pete},
-% title = {Irrigation and drainage engineering},
-% publisher = {Springer},
-% year = {2016},
-% address = {Cham},
-% chapter = {Chemigation}
-% isbn = {978-3-319-05699-9}
-% }
 
 @article{Evans_2007,
 author = {Evans, Tim},
@@ -1955,8 +1959,7 @@ title = {Recovering ammonium and struvite fertilisers from digested sludge dewat
 	year = 2015,
 	month = {Feb},
 	publisher = {Feed the Future},
-	author = {J. Ariga, M. Wanzala, (L. Nagarajan, and P. Fuentes
-and Sarah Gavian},
+	author = {J. Ariga, M. Wanzala, (L. Nagarajan, and P. Fuentes and Sarah Gavian},
 	title = {Developing Competitive Fertilizer Markets in Africa:Policy Lessons from FTF Country Assessments},
 }
 
@@ -1973,8 +1976,8 @@ and Sarah Gavian},
      author = {Argus},
      group = {Argus Media Group},
      year = {2018},
-     number = {Issue 18-8}
-     pages = {9}
+     number = {Issue 18-8},
+     pages = {9},
      institution = {Argus Media Group},
      address = {London UK},
      month = {Feb},
@@ -2040,8 +2043,7 @@ and Sarah Gavian},
 	author =  {{ASTM} International},
 	howpublished = {{ASTM} Standard},
 	title = {Standard Tables for Reference Solar Spectral Irradiances: Direct Normal and Hemispherical on 37$^\circ$ Tilted Surface},
-	year = 2012,
-	%note = {https://doi.org/10.1520/G0173-03R12}
+	year = {2012},
 }
 
 
@@ -2408,7 +2410,7 @@ abstract  ="Direct electrochemical synthesis of ammonia is proposed as a means o
 }
 
 @TECHREPORT{IFDC_2012,
-  AUTHOR =        {P.A. Fuentes, B. Bumb and M. Johnson},
+  AUTHOR =        {{P.A. Fuentes, B. Bumb, and M. Johnson}},
   TITLE =         {Improving Fertilizer Markets in West Africa:  The Fertilizer Supply Chain in Senegal},
   INSTITUTION =   {International Fertilizer Development Center and International Food Policy Research Institute},
   ADDRESS =       {Muscle Shoals, Alabama},
@@ -2418,14 +2420,14 @@ abstract  ="Direct electrochemical synthesis of ammonia is proposed as a means o
 }
 
 @TECHREPORT{IFDC_2011,
-  AUTHOR =        {B. L. Bumb, M. E. Johnson, P. A. Fuentes},
+  AUTHOR =        {{B. L. Bumb, M. E. Johnson, P. A. Fuentes}},
   TITLE =         {Policy Options for Improving Regional Fertilizer Markets in West Africa},
   NUMBER =        {01084},
   INSTITUTION =   {International Food Policy Research Institute and International Fertilizer Development Center},
-  ADDRESS =       {Muscle Shoals, Alabama},
+  ADDRESS =       {Washington DC},
   MONTH =         {May},
   YEAR  =         {2011},
-
+  TYPE  =         {Discussion Paper},
   PAGES =         {40},
 }
 
@@ -2433,14 +2435,15 @@ abstract  ="Direct electrochemical synthesis of ammonia is proposed as a means o
   AUTHOR =        {P. A. Fuentes},
   TITLE =         {Transitioning from Government Control to a Larger Private Sector Participation in the Ghanaian Fertilizer Market},
   INSTITUTION =   {US Agency for International Development and International Fertilizer Development Center},
+  TYPE   =        {Policy Brief},
   ADDRESS =       {Muscle Shoals, Alabama},
   MONTH =         {December},
   YEAR  =         {2018},
 }
 
 @TECHREPORT{IFDC_2012_2,
-  AUTHOR =        {P. A. Fuentes, B. Bumb, and M. Johnson},
-  TITLE =         {Improving Fertilizer Markets in West Africa:  The Fertilizer Supply Chain in Ghana},
+  AUTHOR =        {{P.A. Fuentes, B. Bumb, and M. Johnson}},
+  TITLE =         {International Fertilizer Development Center and International Food Policy Research Institute},
   INSTITUTION =   {US Agency for International Development and International Fertilizer Development Center},
   ADDRESS =       {Muscle Shoals, Alabama},
   MONTH =         {December},
@@ -2448,9 +2451,9 @@ abstract  ="Direct electrochemical synthesis of ammonia is proposed as a means o
 }
 
 @TECHREPORT{IFDC_2012_3,
-  AUTHOR =        {P. A. Fuentes, B. Bumb, and M. Johnson},
-  TITLE =         {Improving Fertilizer Markets in West Africa:The Fertilizer Supply Chain in Nigeria},
-  INSTITUTION =   {US Agency for International Development and International Fertilizer Development Center},
+  AUTHOR =        {{P.A. Fuentes, B. Bumb, and M. Johnson}},
+  TITLE =         {Improving Fertilizer Markets in West Africa: The Fertilizer Supply Chain in Nigeria},
+  INSTITUTION =   {International Fertilizer Development Center and International Food Policy Research Institute},
   ADDRESS =       {Muscle Shoals, Alabama},
   MONTH =         {December},
   YEAR  =         {2012},
